--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -8,4 +8,5 @@
     <h1 class="display-4">Welcome</h1>
     <p>City: @Html.Raw(Model.Weather.CityName)</p>
     <p>Temperature: @Html.Raw(Model.Weather.Values.Temperature)&deg;C</p>
+    <p>Request time: @Html.Raw(Model.Weather.TimeFormatted)</p>
 </div>
