--- a/src/WebApp/ClientApp/src/custom.css
+++ b/src/WebApp/ClientApp/src/custom.css
@@ -12,3 +12,12 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+body {
+  background-color: #6080b3;
+  color: #fff;
+}
+
+.last-updated {
+  color: darkgray;
+}
