--- a/src/WebApp/ClientApp/src/components/Trains.css
+++ b/src/WebApp/ClientApp/src/components/Trains.css
@@ -7,4 +7,22 @@
 table td[data-ontime="false"] {
     color: rgb(190, 15, 15);
     font-weight: bold;
+} 
+tr.closed {
+    /* display: none; */
+    visibility: collapse;
+    -webkit-transition: visibility 0.5s linear;
+       -moz-transition: visibility 0.5s linear;
+        -ms-transition: visibility 0.5s linear;
+         -o-transition: visibility 0.5s linear;
+            transition: visibility 0.5s linear;
+}
+tr.open {
+    /* display: table-row; */
+    visibility: visible;
+     -webkit-transition: visibility 0.5s linear;
+        -moz-transition: visibility 0.5s linear;
+         -ms-transition: visibility 0.5s linear;
+          -o-transition: visibility 0.5s linear;
+             transition: visibility 0.5s linear;
 }
